--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
-/Basics
-/Data Types
+/Aa-Basics
+/Ab-Data Types
 /min_practice.py
-/Functions
-/Modules
-/File_operations
-/Git
-/Data_base
+/Ac-Functions
+/Ad-Modules
+/Ae-File_operations
+/Af-Git
+/Ag-Data_base
